# tsp_optimization_tdd

./: CMakeLists.txt  README.MD  main.cpp
lib/: Population.hpp  Specimen.hpp
src/: Population.cpp  Specimen.cpp  main.cpp  mainMultithread.cpp
tests/: cities.txt  tests.cpp
tsp_data/: FRI26_sol.txt  att48.txt  att48_sol.txt  gr17_sol.txt
